--- a/css/common.css
+++ b/css/common.css
@@ -354,7 +354,7 @@ body {
   padding: 40px;
 }
 
-.form-title {
+.modal-content__title {
   font-weight: 700;
   font-size: 20px;
   line-height: 1.15;
@@ -530,6 +530,8 @@ body {
   margin-right: 12px;
   width: 358px;
   height: 50px;
+
+  color: var(--white);
 
   border: 1px solid rgba(255, 255, 255, 0.3);
   box-sizing: border-box;
