--- a/css/main.css
+++ b/css/main.css
@@ -20,7 +20,7 @@
   color: var(--white);
 }
 
-.hero-title {
+.hero-section__title {
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
@@ -29,7 +29,7 @@
   text-transform: uppercase;
 }
 
-.order-btn {
+.hero-section__order-btn {
   display: inline-block;
   padding: 10px 32px;
   margin: 30px 0 0;
