--- a/css/common.css
+++ b/css/common.css
@@ -45,7 +45,7 @@ body {
 
 /* header */
 
-.header .container {
+.header__container {
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
