--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,19 +1,19 @@
 /* button section */
-.our-portfolio {
+.portfolio__wrap {
   padding-top: 94px;
 }
 
-.portfolio-list {
+.portfolio {
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-.portfolio-item:not(:first-child) {
+.portfolio__item:not(:first-child) {
   margin-left: 30px;
 }
 
-.button {
+.portfolio__button {
   padding: 6px 22px;
   border: none;
   border-radius: 4px;
@@ -32,26 +32,13 @@
   transition-timing-function: var(--timing-function);
 }
 
-.button-current {
-  cursor: pointer;
+.portfolio__button--current {
   background-color: var(--blue);
   color: rgba(255, 255, 255, 1);
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.63;
-  text-align: center;
-  letter-spacing: 0.03em;
-
-  padding: 6px 22px;
-
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
-  border-radius: 4px;
-  border: none;
 }
 
-.button:hover,
-.button:focus {
+.portfolio__button:hover,
+.portfolio__button:focus {
   background-color: var(--blue);
   color: rgba(255, 255, 255, 1);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
@@ -60,11 +47,11 @@
 
 /* our project section */
 
-.our-project {
+.project__wrap {
   padding-top: 34px;
 }
 
-.project-list {
+.project__list {
   display: flex;
   flex-wrap: wrap;
 
@@ -72,7 +59,7 @@
   margin-top: -30px;
 }
 
-.project-item {
+.project__item {
   position: relative;
   flex-basis: calc(100% / 3 - 30px);
   margin-left: 30px;
@@ -81,7 +68,7 @@
   border: 1px solid #eeeeee;
 }
 
-.project-item a {
+.project__item a {
   display: block;
 
   transition-property: box-shadow cursor;
@@ -89,23 +76,23 @@
   transition-timing-function: var(--timing-function);
 }
 
-.project-item a:hover,
-.project-item a:focus {
+.project__item a:hover,
+.project__item a:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
   cursor: pointer;
 }
 
-.project-item:nth-last-child(-n + 3) {
+.project__item:nth-last-child(-n + 3) {
   margin-bottom: 94px;
 }
 
-.product-our-features__thumb {
+.project__thumb {
   position: relative;
   overflow: hidden;
 }
 
-.product-our-features__thumb::before {
+.project__thumb::before {
   content: '';
   display: inline-block;
   position: absolute;
@@ -125,13 +112,13 @@
   transition-timing-function: var(--timing-function);
 }
 
-.project-item a:hover .product-our-features__thumb::before,
-.project-item a:focus .product-our-features__thumb::before {
+.project__item a:hover .project__thumb::before,
+.project__item a:focus .project__thumb::before {
   transform: translateY(0);
   opacity: 1;
 }
 
-.our-features__thumb-text {
+.project__thumb-text {
   position: absolute;
   top: 0;
   left: 0;
@@ -155,17 +142,17 @@
   transform: translateY(100%);
 }
 
-.project-item a:hover .our-features__thumb-text,
-.project-item a:focus .our-features__thumb-text {
+.project__item a:hover .project__thumb-text,
+.project__item a:focus .project__thumb-text {
   transform: translateY(0);
   opacity: 1;
 }
 
-.project-description {
+.project__description {
   padding: 20px 24px;
 }
 
-.name-of-project {
+.project__name {
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
@@ -173,7 +160,7 @@
   text-align: left;
 }
 
-.type-of-work {
+.project__work-type {
   color: var(--secondary);
   font-weight: 400;
   font-size: 16px;
